<resources>
    <!-- Weather icons -->
    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>
    <!-- Symbols -->
    <string name="celsius" translatable="false">&#8451;</string>
    <string name="fahrenheit" translatable="false">&#8457;</string>
    <string name="percent" translatable="false">&#37;</string>
    <!-- Other -->
    <string name="app_name">Weather</string>
    <string name="tempValue" translatable="false">-1 °C</string>
    <string name="temperature">Temperature</string>
    <string name="updating">Updating the weather…</string>
    <string name="settings_screen_waiting">Settings screen during development</string>
    <string name="empty_list">Empty List</string>
    <string name="update_weather">Update weather</string>
    <string name="settings">Settings</string>
    <string name="wiki_info">Wiki info</string>
    <string name="degrees_celsius" translatable="false">°</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="overcast">Overcast</string>
    <string name="open_weather_map_app_id" translatable="false">9183dfc6bd65045b1399c8c9decdf3af</string>
    <string name="city_not_found">City not found</string>
    <string name="choose_city">Choose city</string>
    <string name="cityName" />
    <string name="remove">remove</string>
    <string name="add">add</string>
    <string name="enter_city_name">Enter city name</string>
    <string name="city_img">City image</string>
    <string name="moscow">Moscow</string>
    <string name="go_back">Go back</string>
    <string name="change_city_button">Change city</string>
    <string name="weather_last_week">Weather last week</string>
    <string name="spb"> Saint Petersburg</string>
    <string name="zelenograd"> Zelenograd</string>
    <string name="roslavl">Roslavl</string>
    <string name="dark_theme">Dark theme</string>
    <string name="delete_city">Delete city</string>
    <string name="pressure">Pressure: </string>
    <string name="wind">Wind: </string>
    <string name="city_added">City added</string>
    <string name="cancel">Cancel</string>
    <string name="do_you_want_delete_city">Do you want delete city?</string>
    <string name="yes">Yes</string>
    <string name="last_update">Last update: </string>
    <string name="mmHg">mm Hg</string>
    <string name="ms">m/s</string>
    <string name="city_is_already_in_list">is already in list!</string>
    <string name="send_feedback">Send feedback</string>
    <string name="add_city">Add city</string>
    <string name="hPa">hPa</string>
    <string name="made_by">made by: Alexander Zaytsev</string>
    <string name="github" translatable="false">github</string>
    <string name="github_repository">GitHub repository</string>
    <string name="send_me_email">Send me email</string>
    <string name="degree_word">"Degree: "</string>
    <string name="app_logo">App logo</string>
    <string name="cities_list">Cities list</string>
    <string name="communicate">Communicate</string>
    <string name="about">About developer</string>
    <string name="background_gif">Background GIF</string>
    <string name="get_city_name_by_gps">Get city name by GPS</string>
    <string name="cant_find_GPS">Can\'t connect to GPS</string>

</resources>
