<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background_color">

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="32sp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/made_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/made_by"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_logo"/>

    <ImageButton
        android:id="@+id/githubBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/github"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:contentDescription="@string/github"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/made_by"/>

    <TextView
        android:id="@+id/githubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/githubBtn"
        app:layout_constraintTop_toTopOf="@id/githubBtn"
        app:layout_constraintBottom_toBottomOf="@id/githubBtn"
        android:layout_marginStart="8dp"
        android:text="@string/github_repository"
        android:textSize="22sp"/>

    <ImageButton
        android:id="@+id/emailBtn"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/ic_contact_mail_black_24dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:contentDescription="@string/send_me_email"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/githubBtn"/>

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/emailBtn"
        app:layout_constraintTop_toTopOf="@id/emailBtn"
        app:layout_constraintBottom_toBottomOf="@id/emailBtn"
        android:layout_marginStart="8dp"
        android:text="@string/send_me_email"
        android:textSize="22sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Icons made by Freepik \nhttps://www.flaticon.com/authors/freepik"
        android:gravity="center"
        android:autoLink="web"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>